<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.colby.overwatchstats.login_activity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:id="@+id/header"
        android:text="@string/header"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header"
        android:id="@+id/input"
        android:hint="@string/preview"/>
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/region"
        android:textSize="25sp"
        android:layout_below="@+id/input"
        android:text="@string/region"/>
    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/radios"
        android:layout_below="@+id/region">
        <RadioButton android:id="@+id/radio_us"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:text="@string/us"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton android:id="@+id/radio_eu"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:text="@string/eu"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton android:id="@+id/radio_kr"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:text="@string/kr"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton android:id="@+id/radio_cn"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:text="@string/cn"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton android:id="@+id/radio_global"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:text="@string/global"
            android:onClick="onRadioButtonClicked"/>
    </RadioGroup>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radios"
        android:text="@string/button"
        android:onClick="send_message"
        />

</RelativeLayout>
